Add web banking UI and polish dashboard layout